--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "config": "^3.3.6",
     "deepspeech": "^0.9.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "mqtt": "^4.2.6"
   },
   "name": "deepspeechjs",
   "description": "DeepSpeech runtime transcript NodeJs native client. Some examples and notes.",
